--- a/css/styles.css
+++ b/css/styles.css
@@ -54,9 +54,12 @@ nav {
   height: 80px;
   background-color: #252831;
   text-align:center;
+  display: flex;
+  align-items: center;
 }
 nav h1 {
   margin: auto;
+  padding: 25px 20px;
 }
 nav h1 a {
   color: #fff;
@@ -64,6 +67,7 @@ nav h1 a {
   font-weight: 200;
   letter-spacing: 10px;
   text-transform: uppercase;
+  padding-top: 20%;
 }
 #breadcrumb {
     padding: 10px 40px 16px;
@@ -102,13 +106,22 @@ nav h1 a {
   height: 400px;
   width: 100%;
   background-color: #ccc;
+  text-align: center;
+}
+
+.map-aria-description {
+  display: none;
 }
 /* ====================== Restaurant Filtering ====================== */
 .filter-options {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
   width: 100%;
   height: 50px;
   background-color: #3397DB;
   align-items: center;
+  padding: 15px 0;
 }
 .filter-options h2 {
   color: white;
@@ -129,8 +142,20 @@ nav h1 a {
   width: 200px;
 }
 
+label {
+  visibility: hidden;
+}
+
+.filter-label {
+  color: white;
+}
+
 /* ====================== Restaurant Listing ====================== */
 #restaurants-list {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
   background-color: #f3f3f3;
   list-style: outside none none;
   margin: 0;
@@ -145,7 +170,8 @@ nav h1 a {
   min-height: 380px;
   padding: 0 30px 25px;
   text-align: left;
-  width: 270px;
+  min-width: 270px;
+  max-width: 300px;
 }
 #restaurants-list .restaurant-img {
   background-color: #ccc;
@@ -222,6 +248,7 @@ nav h1 a {
 }
 #restaurant-address {
   font-size: 12pt;
+  font-weight: 700;
   margin: 10px 0px;
 }
 #restaurant-cuisine {
@@ -242,6 +269,12 @@ nav h1 a {
   padding: 140px 40px 30px;
   width: 50%;
 }
+
+#restaurant-container {
+  display: flex;
+  flex-direction: column;
+}
+
 #reviews-container {
   padding: 30px 40px 80px;
 }
@@ -258,8 +291,10 @@ nav h1 a {
 }
 #reviews-list li {
   background-color: #fff;
-    border: 2px solid #f3f3f3;
-  display: block;
+  border: 2px solid #f3f3f3;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
   list-style-type: none;
   margin: 0 0 30px;
   overflow: hidden;
@@ -270,6 +305,26 @@ nav h1 a {
 #reviews-list li p {
   margin: 0 0 10px;
 }
+#reviews-list li p:nth-child(1) {
+  width: 50%;
+  font-size: 1.2em;
+  display: inline-block;
+  color: #174375;
+  line-height: 1;
+}
+#reviews-list li p:nth-child(2) {
+  width: 50%;
+  display: inline-block;
+  font-size: 0.9em;
+  text-align: right;
+  color: black;
+  line-height: 1;
+}
+#reviews-list li p:nth-child(3) {
+  color: #174375;
+  text-align: right;
+}
 #restaurant-hours td {
+  font-weight: bolder;
   color: #666;
 }
