--- a/css/styles.css
+++ b/css/styles.css
@@ -107,10 +107,6 @@ nav h1 a {
   background-color: #ccc;
   text-align: center;
 }
-
-.map-aria-description {
-  display: none;
-}
 /* ====================== Restaurant Filtering ====================== */
 .filter-options {
   display: flex;
@@ -133,7 +129,7 @@ nav h1 a {
   background-color: white;
   border: 1px solid #fff;
   font-family: Arial,sans-serif;
-  font-size: 11pt;
+  font-size: 1.1em;
   height: 35px;
   letter-spacing: 0;
   margin: 10px;
@@ -141,19 +137,11 @@ nav h1 a {
   width: 200px;
 }
 
-label {
-  visibility: hidden;
-}
-
-.filter-label {
-  color: white;
-}
-
 /* ====================== Restaurant Listing ====================== */
 #restaurants-list {
   display: flex;
-  flex-direction: row;
   flex-wrap: wrap;
+  align-items: center;
   justify-content: center;
   background-color: #f3f3f3;
   list-style: outside none none;
@@ -162,6 +150,8 @@ label {
   text-align: center;
 }
 #restaurants-list li {
+  display: flex;
+  flex-direction: column;
   background-color: #fff;
   border: 2px solid #ccc;
   font-family: Arial,sans-serif;
@@ -169,37 +159,40 @@ label {
   min-height: 380px;
   padding: 0 30px 25px;
   text-align: left;
-  min-width: 270px;
-  max-width: 300px;
+  max-width: 85%;
 }
 #restaurants-list .restaurant-img {
   background-color: #ccc;
   display: block;
   margin: 0;
   max-width: 100%;
-  min-height: 248px;
+  min-height: auto;
   min-width: 100%;
 }
 #restaurants-list li h1 {
   color: #f18200;
   font-family: Arial,sans-serif;
-  font-size: 14pt;
+  font-size: 1.3em;
   font-weight: 200;
   letter-spacing: 0;
   line-height: 1.3;
   margin: 20px 0 10px;
   text-transform: uppercase;
+  padding: 0 20px;
+  height: 25px;
 }
 #restaurants-list p {
   margin: 0;
-  font-size: 11pt;
+  font-size: 1.1em;
+  padding: 0 20px;
+  width: 55%;
 }
 #restaurants-list li a {
   background-color: orange;
   border-bottom: 3px solid #eee;
   color: #fff;
   display: inline-block;
-  font-size: 10pt;
+  font-size: 1em;
   margin: 15px 0 0;
   padding: 8px 30px 10px;
   text-align: center;
@@ -208,19 +201,21 @@ label {
 }
 
 /* ====================== Restaurant Details ====================== */
+.inside {
+  display: flex;
+  flex-direction: row;
+  flex-flow: wrap;
+  width: 100%;
+}
 .inside header {
-  position: fixed;
-  top: 0;
   width: 100%;
   z-index: 1000;
 }
 .inside #map-container {
   background: blue none repeat scroll 0 0;
-  height: 87%;
-  position: fixed;
-  right: 0;
-  top: 80px;
-  width: 50%;
+  position: relative;
+  height: 270px;
+  width: 100%;
 }
 .inside #map {
   background-color: #ccc;
@@ -228,14 +223,17 @@ label {
   width: 100%;
 }
 .inside #footer {
-  bottom: 0;
-  position: absolute;
-  width: 50%;
+  position: relative;
+  width: 100%;
+}
+#resraurant-container {
+  position: relative;
+  width: 100%;
 }
 #restaurant-name {
   color: #f18200;
   font-family: Arial,sans-serif;
-  font-size: 20pt;
+  font-size: 2em;
   font-weight: 200;
   letter-spacing: 0;
   margin: 15px 0 30px;
@@ -243,30 +241,28 @@ label {
   line-height: 1.1;
 }
 #restaurant-img {
-	width: 90%;
+	width: 100%;
 }
 #restaurant-address {
-  font-size: 12pt;
+  font-size: 1.2em;
   font-weight: 700;
   margin: 10px 0px;
 }
 #restaurant-cuisine {
   background-color: #333;
   color: #ddd;
-  font-size: 12pt;
+  font-size: 1.2em;
   font-weight: 300;
   letter-spacing: 10px;
   margin: 0 0 20px;
   padding: 2px 0;
   text-align: center;
   text-transform: uppercase;
-	width: 90%;
 }
 #restaurant-container, #reviews-container {
   border-bottom: 1px solid #d9d9d9;
   border-top: 1px solid #fff;
   padding: 140px 40px 30px;
-  width: 50%;
 }
 
 #restaurant-container {
@@ -279,10 +275,10 @@ label {
 }
 #reviews-container h2 {
   color: #f58500;
-  font-size: 24pt;
+  font-size: 2.4em;
   font-weight: 300;
   letter-spacing: -1px;
-  padding-bottom: 1pt;
+  padding-bottom: 1px;
 }
 #reviews-list {
   margin: 0;
@@ -299,7 +295,6 @@ label {
   overflow: hidden;
   padding: 0 20px 20px;
   position: relative;
-  width: 85%;
 }
 #reviews-list li p {
   margin: 0 0 10px;
@@ -308,7 +303,6 @@ label {
   width: 50%;
   font-size: 1.2em;
   display: inline-block;
-  color: #174375;
   line-height: 1;
 }
 #reviews-list li p:nth-child(2) {
@@ -316,7 +310,6 @@ label {
   display: inline-block;
   font-size: 0.9em;
   text-align: right;
-  color: black;
   line-height: 1;
 }
 #reviews-list li p:nth-child(3) {
