--- a/css/styles.css
+++ b/css/styles.css
@@ -18,7 +18,7 @@ ul, li {
 	color: #333;
 }
 a {
-	color: orange;
+	color: #fff;
 	text-decoration: none;
 }
 a:hover, a:focus {
@@ -50,12 +50,11 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
 }
 /* ====================== Navigation ====================== */
 nav {
+  display: flex;
   width: 100%;
   height: 80px;
-  background-color: #252831;
+  background-color: darkred;
   text-align:center;
-  display: flex;
-  align-items: center;
 }
 nav h1 {
   margin: auto;
@@ -73,7 +72,6 @@ nav h1 a {
     background-color: #eee;
     font-size: 17px;
     margin: 0;
-    width: calc(50% - 80px);
 }
 
 /* Display list items side by side */
@@ -91,7 +89,7 @@ nav h1 a {
 
 /* Add a color to all links inside the list */
 #breadcrumb li a {
-    color: #0275d8;
+    color: darkred;
     text-decoration: none;
 }
 
@@ -105,18 +103,15 @@ nav h1 a {
   height: 400px;
   width: 100%;
   background-color: #ccc;
-  text-align: center;
 }
 /* ====================== Restaurant Filtering ====================== */
 .filter-options {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  width: 100%;
-  height: 50px;
-  background-color: #3397DB;
+  padding: 10px 0 3px;
+  text-align: center;
   align-items: center;
-  padding: 15px 0;
+  width: 100%;
+  height: auto;
+  background-color: #252831;
 }
 .filter-options h2 {
   color: white;
@@ -157,7 +152,7 @@ nav h1 a {
   font-family: Arial,sans-serif;
   margin: 15px;
   min-height: 380px;
-  padding: 0 30px 25px;
+  padding: 0 0 15px;
   text-align: left;
   max-width: 85%;
 }
@@ -170,7 +165,7 @@ nav h1 a {
   min-width: 100%;
 }
 #restaurants-list li h1 {
-  color: #f18200;
+  color: darkred;
   font-family: Arial,sans-serif;
   font-size: 1.3em;
   font-weight: 200;
@@ -182,19 +177,19 @@ nav h1 a {
   height: 25px;
 }
 #restaurants-list p {
-  margin: 0;
   font-size: 1.1em;
+  margin: 0;
   padding: 0 20px;
   width: 55%;
 }
 #restaurants-list li a {
-  background-color: orange;
+  background-color: darkred;
   border-bottom: 3px solid #eee;
   color: #fff;
   display: inline-block;
-  font-size: 1em;
+  font-size: 1.0em;
   margin: 15px 0 0;
-  padding: 8px 30px 10px;
+  padding: 10px 42px 10px;
   text-align: center;
   text-decoration: none;
   text-transform: uppercase;
@@ -209,21 +204,15 @@ nav h1 a {
 }
 .inside header {
   width: 100%;
-  z-index: 1000;
 }
 .inside #map-container {
-  background: blue none repeat scroll 0 0;
   position: relative;
-  height: 270px;
   width: 100%;
+  height: 270px;
 }
 .inside #map {
   background-color: #ccc;
   height: 100%;
-  width: 100%;
-}
-.inside #footer {
-  position: relative;
   width: 100%;
 }
 #resraurant-container {
@@ -231,9 +220,9 @@ nav h1 a {
   width: 100%;
 }
 #restaurant-name {
-  color: #f18200;
+  color: darkred;
   font-family: Arial,sans-serif;
-  font-size: 2em;
+  font-size: 2.0em;
   font-weight: 200;
   letter-spacing: 0;
   margin: 15px 0 30px;
@@ -245,12 +234,11 @@ nav h1 a {
 }
 #restaurant-address {
   font-size: 1.2em;
-  font-weight: 700;
   margin: 10px 0px;
 }
 #restaurant-cuisine {
-  background-color: #333;
-  color: #ddd;
+  background-color: #252831;
+  color: #fff;
   font-size: 1.2em;
   font-weight: 300;
   letter-spacing: 10px;
@@ -262,19 +250,13 @@ nav h1 a {
 #restaurant-container, #reviews-container {
   border-bottom: 1px solid #d9d9d9;
   border-top: 1px solid #fff;
-  padding: 140px 40px 30px;
+  padding: 40px 30px;
 }
-
-#restaurant-container {
-  display: flex;
-  flex-direction: column;
-}
-
 #reviews-container {
   padding: 30px 40px 80px;
 }
 #reviews-container h2 {
-  color: #f58500;
+  color: darkred;
   font-size: 2.4em;
   font-weight: 300;
   letter-spacing: -1px;
@@ -286,14 +268,12 @@ nav h1 a {
 }
 #reviews-list li {
   background-color: #fff;
-  border: 2px solid #f3f3f3;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
+    border: 2px solid #f3f3f3;
+  display: block;
   list-style-type: none;
   margin: 0 0 30px;
   overflow: hidden;
-  padding: 0 20px 20px;
+  padding: 20px 20px;
   position: relative;
 }
 #reviews-list li p {
@@ -313,10 +293,81 @@ nav h1 a {
   line-height: 1;
 }
 #reviews-list li p:nth-child(3) {
-  color: #174375;
+  color: darkred;
   text-align: right;
 }
 #restaurant-hours td {
-  font-weight: bolder;
   color: #666;
+}
+.inside #footer {
+  width: 100%;
+}
+
+/* ====================== Media Queries ====================== */
+
+@media (min-width: 458px) {
+  .filter-options {
+    text-align: left;
+  }
+}
+
+@media (min-width: 640px) and (max-width: 929px){
+  #restaurants-list li {
+    max-width: 42%;
+  }
+  #restaurants-list li h1 {
+    height: 35px;
+  }
+}
+
+@media (min-width: 930px) {
+  #restaurants-list li {
+    max-width: 30%;
+  }
+  #restaurants-list p {
+    width: 66%;
+  }  
+  #restaurants-list li h1 {
+    height: 41px;
+  }
+
+  .inside header {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 1000;
+  }
+  .inside #map-container {
+    background: blue none repeat scroll 0 0;
+    height: 88%;
+    position: fixed;
+    right: 0;
+    top: 80px;
+    width: 50%;
+  }
+  #breadcrumb {
+    width: calc(50% - 80px);
+  }
+  #restaurant-img {
+    width: 90%;
+  }
+  #restaurant-container {
+    width: 45%;
+    padding: 140px 40px 30px;
+  }
+  #reviews-container {
+    width: 45%;
+    padding: 40px 30px;
+  }
+  #restaurant-cuisine {
+    width: 90%;
+  }
+  #reviews-list li {
+    width: 85%;
+  }
+  .inside #footer {
+    bottom: 0;
+    position: absolute;
+    width: 45%;
+  }
 }
