Change color from red to purple

--- a/css/styles.css
+++ b/css/styles.css
@@ -48,12 +48,15 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
   text-align: center;
   text-transform: uppercase;
 }
+.inside #footer {
+  width: 100%;
+}
 /* ====================== Navigation ====================== */
 nav {
   display: flex;
   width: 100%;
   height: 80px;
-  background-color: darkred;
+  background-color: rgb(101, 9, 138);
   text-align:center;
 }
 nav h1 {
@@ -89,7 +92,7 @@ nav h1 a {
 
 /* Add a color to all links inside the list */
 #breadcrumb li a {
-    color: darkred;
+    color: rgb(101, 9, 138);
     text-decoration: none;
 }
 
@@ -165,7 +168,7 @@ nav h1 a {
   min-width: 100%;
 }
 #restaurants-list li h1 {
-  color: darkred;
+  color: rgb(101, 9, 138);
   font-family: Arial,sans-serif;
   font-size: 1.3em;
   font-weight: 200;
@@ -183,7 +186,7 @@ nav h1 a {
   width: 55%;
 }
 #restaurants-list li a {
-  background-color: darkred;
+  background-color: rgb(101, 9, 138);
   border-bottom: 3px solid #eee;
   color: #fff;
   display: inline-block;
@@ -220,7 +223,7 @@ nav h1 a {
   width: 100%;
 }
 #restaurant-name {
-  color: darkred;
+  color: rgb(101, 9, 138);
   font-family: Arial,sans-serif;
   font-size: 2.0em;
   font-weight: 200;
@@ -256,7 +259,7 @@ nav h1 a {
   padding: 30px 40px 80px;
 }
 #reviews-container h2 {
-  color: darkred;
+  color: rgb(101, 9, 138);
   font-size: 2.4em;
   font-weight: 300;
   letter-spacing: -1px;
@@ -293,14 +296,11 @@ nav h1 a {
   line-height: 1;
 }
 #reviews-list li p:nth-child(3) {
-  color: darkred;
+  color: rgb(101, 9, 138);
   text-align: right;
 }
 #restaurant-hours td {
   color: #666;
-}
-.inside #footer {
-  width: 100%;
 }
 
 /* ====================== Media Queries ====================== */
